--- a/Game/index.html
+++ b/Game/index.html
@@ -23,7 +23,7 @@
     loader.onComplete = setup;
     loader.load();
 
-    var hero, goblin, dungeon, state, message, door, textures, heroTexture, movementInterval;
+    var hero, goblin, dungeon, state, message, door, textures, heroTexture, goblinTexture, movementInterval,goblinInterval, monstersMoving;
     // Function to load tileset and use sprite from it.
     function setup() {
 
@@ -31,7 +31,7 @@
       var dungeonTexture = PIXI.TextureCache["assets/dungeon.png"];
       dungeon = new PIXI.Sprite(dungeonTexture);
       stage.addChild(dungeon);
-
+      monstersMoving =false;
       message = new PIXI.Text(
         "Save the princess!",
         {font: "32px courier", fill: "white"}
@@ -79,10 +79,16 @@
 
 
       // Goblin
-      var goblinTexture = PIXI.TextureCache["assets/goblin.png"];
-      var goblinFront = new PIXI.Rectangle(32, 0, 30, 30);
+      goblinTexture = PIXI.TextureCache["assets/goblin.png"];
 
-      goblinTexture.setFrame(goblinFront);
+      textures["goblin"] = {
+        front: [new PIXI.Rectangle(0, 0, 30, 30), new PIXI.Rectangle(32, 0, 30, 30),new PIXI.Rectangle(64, 0, 30, 30)],
+        left: [new PIXI.Rectangle(0, 32, 30, 30), new PIXI.Rectangle(32, 32, 30, 30),new PIXI.Rectangle(64, 32, 30, 30)],
+        right: [new PIXI.Rectangle(0, 64, 30, 30), new PIXI.Rectangle(32, 64, 30, 30),new PIXI.Rectangle(64, 64, 30, 30)],
+        back: [new PIXI.Rectangle(0, 96, 30, 30), new PIXI.Rectangle(32, 96, 30, 30),new PIXI.Rectangle(64, 96, 30, 30)]
+      };
+
+      goblinTexture.setFrame(textures.goblin.front[0]);
 
       goblin = new PIXI.Sprite(goblinTexture);
 
@@ -93,6 +99,14 @@
       goblin.vx = 5;
       stage.addChild(goblin);
 
+      moveMonster(goblin);
+
+      var counter = 0;
+      goblinTexture.setFrame(textures.goblin.front[counter]);
+      goblinInterval = setInterval(function() {
+        goblinTexture.setFrame(textures.goblin.front[counter]);
+        counter = (counter + 1) % 3;
+      }, 100);
       //Position the rocket sprite on the canvas
       hero.x = 32;
       hero.y = 32;
@@ -258,16 +272,32 @@
 
       //Move the blob
       blob.y += blob.vy;
-
       //Check the blob's screen boundaries
       var blobHitsWall = contain(blob, {x: 28, y: 10, width: 488, height: 480});
 
       //If the blob hits the top or bottom of the stage, reverse
       //its direction
-      if (blobHitsWall === "top" || blobHitsWall === "bottom") {
+      if (blobHitsWall === "top") {
         blob.vy *= -1;
+        var counter = 0;
+        goblinTexture.setFrame(textures.goblin.front[counter]);
+        clearInterval(goblinInterval);
+        goblinInterval = setInterval(function() {
+          goblinTexture.setFrame(textures.goblin.front[counter]);
+          counter = (counter + 1) % 3;
+        }, 100);
       }
 
+      if (blobHitsWall === "bottom") {
+        blob.vy *= -1;
+        var counter = 0;
+        goblinTexture.setFrame(textures.goblin.back[counter]);
+        clearInterval(goblinInterval);
+        goblinInterval = setInterval(function() {
+          goblinTexture.setFrame(textures.goblin.back[counter]);
+          counter = (counter + 1) % 3;
+        }, 100);
+      }
       //Test for a collision. If any of the enemies are touching
       //the explorer, set `explorerHit` to `true`
       if(hitTestRectangle(hero, blob)) {
