--- a/Game/index.html
+++ b/Game/index.html
@@ -1,362 +1,371 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Hello World</title>
+<title>BTP600 - Assignment 2</title>
+
 <body>
-    <script src="pixi.js/bin/pixi.js"></script>
-    <script type="text/javascript" src="supportlib.js"></script>
-    <script src="Goblin.js"></script>
-    <script src="Key.js"></script>
-    <script type="text/javascript">
+	<script src="pixi.js/bin/pixi.js"></script>
+	<script type="text/javascript" src="supportlib.js"></script>
+	<script src="Goblin.js"></script>
+	<script src="Key.js"></script>
+	<script type="text/javascript">
+		var stage = new PIXI.Stage(0x000000);
+		var renderer = PIXI.autoDetectRenderer(
+			512, 512, {
+				antialiasing: false,
+				transparent: false,
+				resolution: 1
+			}
+		);
+
+		document.body.appendChild(renderer.view);
+
+		// Load tileset
+		var loader = new PIXI.AssetLoader([
+			"assets/tileset.png",
+			"assets/dungeon.png",
+			"assets/goblin.png",
+			"assets/key.png",
+			"assets/door-tile.png"
+		]);
+
+		loader.onComplete = setup;
+
+		loader.load();
+
+		var hero,
+			goblin,
+			dungeon,
+			state,
+			message,
+			door = {},
+			frames = {},
+			movementInterval,
+			goblinInterval,
+			monstersMoving,
+			gameOverScene,
+			gameStartScene,
+			sprites = {},
+			gamePlayScene;
 
-    var stage = new PIXI.Stage(0x000000);
-    var renderer = PIXI.autoDetectRenderer(
-      512, 512,
-      {antialiasing: false, transparent: false, resolution: 1}
-    );
 
-    document.body.appendChild(renderer.view);
-
-    // Load tileset
-    var loader = new PIXI.AssetLoader([
-            "assets/tileset.png",
-            "assets/dungeon.png",
-            "assets/goblin.png",
-            "assets/key.png",
-            "assets/door-tile.png"]);
-
-    loader.onComplete = setup;
 
-    loader.load();
+		// Function to load tileset and use sprite from it.
+		function setup() {
+			// Setting up scenes
+			gamePlayScene = new PIXI.DisplayObjectContainer();
+			gameOverScene = new PIXI.DisplayObjectContainer();
 
-    var hero,
-        goblin,
-        dungeon,
-        state,
-        message,
-        door = {},
-        frames = {},
-        movementInterval,
-        goblinInterval,
-        monstersMoving,
-        gameOverScene,
-        gameStartScene,
-        sprites = {},
-        gamePlayScene;
+			stage.addChild(gamePlayScene);
+			stage.addChild(gameOverScene);
 
+			gameOverScene.visible = false;
 
+			// Dungeon Texture
+			var dungeonTexture = PIXI.TextureCache["assets/dungeon.png"];
+			dungeon = new PIXI.Sprite(dungeonTexture);
+			gamePlayScene.addChild(dungeon);
 
-    // Function to load tileset and use sprite from it.
-    function setup() {
-      // Setting up scenes
-      gamePlayScene = new PIXI.DisplayObjectContainer();
-      gameOverScene = new PIXI.DisplayObjectContainer();
+			monstersMoving = false;
+			message = new PIXI.Text(
+				"Save the princess!", {
+					font: "32px courier",
+					fill: "white"
+				}
+			);
 
-      stage.addChild(gamePlayScene);
-      stage.addChild(gameOverScene);
+			message.position.set(128, 256);
+			gamePlayScene.addChild(message);
 
-      gameOverScene.visible = false;
 
-      // Dungeon Texture
-      var dungeonTexture = PIXI.TextureCache["assets/dungeon.png"];
-      dungeon = new PIXI.Sprite(dungeonTexture);
-      gamePlayScene.addChild(dungeon);
+			//Create the `tileset` sprite from the texture
+			sprites.hero = PIXI.TextureCache["assets/tileset.png"];
 
-      monstersMoving =false;
-      message = new PIXI.Text(
-        "Save the princess!",
-        {font: "32px courier", fill: "white"}
-      );
+			//Create a rectangle object that defines the position and
+			//size of the sub-image you want to extract from the texture
+			frames.hero = {
+				front: [new PIXI.Rectangle(188, 128, 30, 30), new PIXI.Rectangle(220, 128, 30, 30), new PIXI.Rectangle(252, 128, 30, 30)],
+				back: [new PIXI.Rectangle(188, 224, 30, 30), new PIXI.Rectangle(220, 224, 30, 30), new PIXI.Rectangle(252, 224, 30, 30)],
+				right: [new PIXI.Rectangle(188, 192, 30, 30), new PIXI.Rectangle(220, 192, 30, 30), new PIXI.Rectangle(252, 192, 30, 30)],
+				left: [new PIXI.Rectangle(188, 160, 30, 30), new PIXI.Rectangle(220, 160, 30, 30), new PIXI.Rectangle(252, 160, 30, 30)]
+			};
 
-      message.position.set(128, 256);
-      gamePlayScene.addChild(message);
+			//Tell the texture to use that rectangular section
+			sprites.hero.setFrame(frames.hero.front[0]);
 
+			//Create the sprite from the texture
+			hero = new PIXI.Sprite(sprites.hero);
 
-      //Create the `tileset` sprite from the texture
-      sprites.hero = PIXI.TextureCache["assets/tileset.png"];
+			//Position the rocket sprite on the canvas
+			hero.x = 32;
+			hero.y = 32;
 
-      //Create a rectangle object that defines the position and
-      //size of the sub-image you want to extract from the texture
-      frames.hero = {
-        front : [new PIXI.Rectangle(188, 128, 30, 30), new PIXI.Rectangle(220, 128, 30, 30), new PIXI.Rectangle(252, 128, 30, 30)],
-        back :  [new PIXI.Rectangle(188, 224, 30, 30), new PIXI.Rectangle(220, 224, 30, 30), new PIXI.Rectangle(252, 224, 30, 30)],
-        right : [new PIXI.Rectangle(188, 192, 30, 30), new PIXI.Rectangle(220, 192, 30, 30), new PIXI.Rectangle(252, 192, 30, 30)],
-        left :  [new PIXI.Rectangle(188, 160, 30, 30), new PIXI.Rectangle(220, 160, 30, 30), new PIXI.Rectangle(252, 160, 30, 30)]
-      };
+			moveHero();
 
-      //Tell the texture to use that rectangular section
-      sprites.hero.setFrame(frames.hero.front[0]);
+			// Set velocity
+			hero.vx = 0;
+			hero.vy = 0;
 
-      //Create the sprite from the texture
-      hero = new PIXI.Sprite(sprites.hero);
 
-      //Position the rocket sprite on the canvas
-      hero.x = 32;
-      hero.y = 32;
+			//Add the rocket to the stage
+			gamePlayScene.addChild(hero);
 
-      moveHero();
 
-      // Set velocity
-      hero.vx = 0;
-      hero.vy = 0;
 
+			// Create door texture
+			frames.door = {
+				north: new PIXI.Rectangle(224, 224, 32, 32),
+				west: new PIXI.Rectangle(160, 96, 32, 32),
+				south: new PIXI.Rectangle(128, 224, 32, 32),
+				east: new PIXI.Rectangle(160, 96, 32, 32)
+			};
 
-      //Add the rocket to the stage
-      gamePlayScene.addChild(hero);
+			sprites.door = {
+				north: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.north),
+				south: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.south),
+				west: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.west),
+				east: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.east)
+			};
 
+			// NORTH DOOR
+			door.north = new PIXI.Sprite(sprites.door.north);
 
+			door.north.position.set(240, 0);
 
-      // Create door texture
-      frames.door = {
-        north: new PIXI.Rectangle(224, 224, 32, 32),
-        west: new PIXI.Rectangle(160, 96, 32, 32),
-        south: new PIXI.Rectangle(128, 224, 32, 32),
-        east: new PIXI.Rectangle(160, 96, 32, 32)
-      };
+			gamePlayScene.addChild(door.north);
 
-      sprites.door = {
-        north: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.north),
-        south: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.south),
-        west: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.west),
-        east: new PIXI.Texture(PIXI.BaseTextureCache["assets/door-tile.png"], frames.door.east)
-      };
+			// SOUTH DOOR
 
-      // NORTH DOOR
-      door.north = new PIXI.Sprite(sprites.door.north);
+			door.south = new PIXI.Sprite(sprites.door.south);
 
-      door.north.position.set(240, 0);
+			door.south.position.set(240, 454);
 
-      gamePlayScene.addChild(door.north);
+			gamePlayScene.addChild(door.south);
 
-      // SOUTH DOOR
+			// WEST DOOR
 
-      door.south = new PIXI.Sprite(sprites.door.south);
+			door.west = new PIXI.Sprite(sprites.door.west);
 
-      door.south.position.set(240, 454);
+			door.west.position.set(8, 240);
 
-      gamePlayScene.addChild(door.south);
+			gamePlayScene.addChild(door.west);
 
-      // WEST DOOR
+			// EAST DOOR
 
-      door.west = new PIXI.Sprite(sprites.door.west);
+			door.east = new PIXI.Sprite(sprites.door.east);
 
-      door.west.position.set(8, 240);
+			door.east.position.set(502, 240);
 
-      gamePlayScene.addChild(door.west);
+			door.east.scale.x = -1;
 
-      // EAST DOOR
+			gamePlayScene.addChild(door.east);
 
-      door.east = new PIXI.Sprite(sprites.door.east);
+			// Goblin
 
-      door.east.position.set(502, 240);
+			// frames.goblin = {
+			//   front: [new PIXI.Rectangle(0, 0, 30, 30), new PIXI.Rectangle(32, 0, 30, 30),new PIXI.Rectangle(64, 0, 30, 30)],
+			//   left: [new PIXI.Rectangle(0, 32, 30, 30), new PIXI.Rectangle(32, 32, 30, 30),new PIXI.Rectangle(64, 32, 30, 30)],
+			//   right: [new PIXI.Rectangle(0, 64, 30, 30), new PIXI.Rectangle(32, 64, 30, 30),new PIXI.Rectangle(64, 64, 30, 30)],
+			//   back: [new PIXI.Rectangle(0, 96, 30, 30), new PIXI.Rectangle(32, 96, 30, 30),new PIXI.Rectangle(64, 96, 30, 30)]
+			// };
 
-      door.east.scale.x = -1;
+			// sprites.goblin = new PIXI.Texture(PIXI.TextureCache["assets/goblin.png"], frames.goblin.front[0]);
 
-      gamePlayScene.addChild(door.east);
+			// goblin = new PIXI.Sprite(sprites.goblin);
 
-      // Goblin
+			// goblin.x = 64;
+			// goblin.y = 64;
 
-      // frames.goblin = {
-      //   front: [new PIXI.Rectangle(0, 0, 30, 30), new PIXI.Rectangle(32, 0, 30, 30),new PIXI.Rectangle(64, 0, 30, 30)],
-      //   left: [new PIXI.Rectangle(0, 32, 30, 30), new PIXI.Rectangle(32, 32, 30, 30),new PIXI.Rectangle(64, 32, 30, 30)],
-      //   right: [new PIXI.Rectangle(0, 64, 30, 30), new PIXI.Rectangle(32, 64, 30, 30),new PIXI.Rectangle(64, 64, 30, 30)],
-      //   back: [new PIXI.Rectangle(0, 96, 30, 30), new PIXI.Rectangle(32, 96, 30, 30),new PIXI.Rectangle(64, 96, 30, 30)]
-      // };
+			// goblin.vy = 5;
+			// goblin.vx = 5;
 
-      // sprites.goblin = new PIXI.Texture(PIXI.TextureCache["assets/goblin.png"], frames.goblin.front[0]);
+			// gamePlayScene.addChild(goblin);
 
-      // goblin = new PIXI.Sprite(sprites.goblin);
+			// moveMonster(goblin);
 
-      // goblin.x = 64;
-      // goblin.y = 64;
 
-      // goblin.vy = 5;
-      // goblin.vx = 5;
+			// var counter = 0;
+			// sprites.goblin.setFrame(frames.goblin.front[counter]);
+			// goblinInterval = setInterval(function() {
+			//   sprites.goblin.setFrame(frames.goblin.front[counter]);
+			//   counter = (counter + 1) % 3;
+			// }, 100);
+			goblin = new Goblin();
 
-      // gamePlayScene.addChild(goblin);
+			gamePlayScene.addChild(goblin.getSprite());
 
-      // moveMonster(goblin);
+			//console.log(goblin);
+			goblin.animateFront();
 
 
-      // var counter = 0;
-      // sprites.goblin.setFrame(frames.goblin.front[counter]);
-      // goblinInterval = setInterval(function() {
-      //   sprites.goblin.setFrame(frames.goblin.front[counter]);
-      //   counter = (counter + 1) % 3;
-      // }, 100);
-      goblin = new Goblin();
+			//////////////////////////////////////////////
+			// KEY
+			/////////////////////////////////////////////
+			key = new Key();
+			key.spawn();
+			gamePlayScene.addChild(key.getSprite());
 
-      gamePlayScene.addChild(goblin.getSprite());
 
-      //console.log(goblin);
-      goblin.animateFront();
-	  
-	  
-	  //////////////////////////////////////////////
-	  // KEY
-	  /////////////////////////////////////////////
-	  key = new Key();
-	  key.spawn();
-	  gamePlayScene.addChild(key.getSprite());
-	  
-	  
-	  
 
-      // Set game state
-      state = play;
 
-      //Render the stage
-      renderer.render(stage);
+			// Set game state
+			state = play;
 
-      //Start the game loop
-      gameLoop();
-    }
+			//Render the stage
+			renderer.render(stage);
 
-    function gameLoop() {
+			//Start the game loop
+			gameLoop();
+		}
 
-      //Loop this function at 60 frames per second
-      requestAnimationFrame(gameLoop);
+		function gameLoop() {
 
-      //Update the current game state
-      state();
+			//Loop this function at 60 frames per second
+			requestAnimationFrame(gameLoop);
 
-      //Render the stage to see the animation
-      renderer.render(stage);
-    }
+			//Update the current game state
+			state();
 
+			//Render the stage to see the animation
+			renderer.render(stage);
+		}
 
-    function play() {
 
-      //Handle collison
-      contain(hero, {x: 28, y: 10, width: 488, height: 480});
-      //Move the hero 1 pixel to the right each frame
-      hero.x += hero.vx;
-      hero.y += hero.vy;
+		function play() {
 
+			//Handle collison
+			contain(hero, {
+				x: 28,
+				y: 10,
+				width: 488,
+				height: 480
+			});
+			//Move the hero 1 pixel to the right each frame
+			hero.x += hero.vx;
+			hero.y += hero.vy;
 
-      goblin.moveVertical();
 
+			goblin.moveVertical();
 
-      if (hitTestRectangle(hero, door.north)) {
-        gameOverScene.visible = true;
-        gamePlayScene.visible = false;
-      }
-      //check for a collision between the cat and the box
-      if (hitTestRectangle(hero, goblin.getSprite())) {
 
-        //if there's a collision, change the message text
-        //and tint the box red
-        message.setText("hit!");
-        hero.tint = 0xff3300;
-
-      } else {
-
-        //if there's no collision, reset the message
-        //text and the box's color
-        message.setText("No collision...");
-        hero.tint = 0xffffff;
-
-      }
-
-    }
-
-    function moveHero() {
-      // Handle Keyboard
-      //Capture the keyboard arrow keys
-      var left = keyboard(37),
-      up = keyboard(38),
-      right = keyboard(39),
-      down = keyboard(40);
-
-
-      //Left arrow key `press` method
-      var interval;
-
-
-      left.press = function() {
-        //Change the hero's velocity when the key is pressed
-        hero.vx = -3;
-        hero.vy = 0;
-        var counter = 0;
-        clearInterval(interval);
-        sprites.hero.setFrame(frames.hero.left[counter]);
-        interval = setInterval(function() {
-            sprites.hero.setFrame(frames.hero.left[counter]);
-            counter = (counter + 1) % 3;
-        }, 100);
-      };
-
-      //Left arrow key `release` method
-      left.release = function() {
-        //If the left arrow has been released, and the right arrow isn't down,
-        //and the hero isn't moving vertically:
-        //Stop the hero
-        if (!right.isDown && hero.vy === 0) {
-          hero.vx = 0;
-          clearInterval(interval);
-        }
-      };
-
-      //Up
-      var upTimeout;
-      up.press = function() {
-        hero.vy = -3;
-        hero.vx = 0;
-        var counter = 0;
-        sprites.hero.setFrame(frames.hero.back[counter]);
-        clearInterval(interval);
-        interval = setInterval(function() {
-            sprites.hero.setFrame(frames.hero.back[counter]);
-            counter = (counter + 1) % 3;
-        }, 100);
-      };
-      up.release = function() {
-        if (!down.isDown && hero.vx === 0) {
-          hero.vy = 0;
-          clearInterval(interval);
-        }
-      };
-
-      //Right
-      var rightTimeout;
-      right.press = function() {
-        hero.vx = 3;
-        hero.vy = 0;
-        var counter = 0;
-        sprites.hero.setFrame(frames.hero.right[counter]);
-        clearInterval(interval);
-        interval = setInterval(function() {
-            sprites.hero.setFrame(frames.hero.right[counter]);
-            counter = (counter + 1) % 3;
-        }, 100);
-      };
-      right.release = function() {
-        if (!left.isDown && hero.vy === 0) {
-          hero.vx = 0;
-          clearInterval(interval);
-        }
-      };
-
-      //Down
-      var downTimeout;
-      down.press = function() {
-        hero.vy = 3;
-        hero.vx = 0;
-        var counter = 0;
-        sprites.hero.setFrame(frames.hero.front[counter]);
-        clearInterval(interval);
-        interval = setInterval(function() {
-            sprites.hero.setFrame(frames.hero.front[counter]);
-            counter = (counter + 1) % 3;
-        }, 100);
-      };
-      down.release = function() {
-        if (!up.isDown && hero.vx === 0) {
-          hero.vy = 0;
-          clearInterval(interval);
-        }
-      };
-    }
-
-
-    </script>
+			if (hitTestRectangle(hero, door.north)) {
+				gameOverScene.visible = true;
+				gamePlayScene.visible = false;
+			}
+			//check for a collision between the cat and the box
+			if (hitTestRectangle(hero, goblin.getSprite())) {
+
+				//if there's a collision, change the message text
+				//and tint the box red
+				message.setText("hit!");
+				hero.tint = 0xff3300;
+
+			} else {
+
+				//if there's no collision, reset the message
+				//text and the box's color
+				message.setText("No collision...");
+				hero.tint = 0xffffff;
+
+			}
+
+		}
+
+		function moveHero() {
+			// Handle Keyboard
+			//Capture the keyboard arrow keys
+			var left = keyboard(37),
+				up = keyboard(38),
+				right = keyboard(39),
+				down = keyboard(40);
+
+
+			//Left arrow key `press` method
+			var interval;
+
+
+			left.press = function() {
+				//Change the hero's velocity when the key is pressed
+				hero.vx = -3;
+				hero.vy = 0;
+				var counter = 0;
+				clearInterval(interval);
+				sprites.hero.setFrame(frames.hero.left[counter]);
+				interval = setInterval(function() {
+					sprites.hero.setFrame(frames.hero.left[counter]);
+					counter = (counter + 1) % 3;
+				}, 100);
+			};
+
+			//Left arrow key `release` method
+			left.release = function() {
+				//If the left arrow has been released, and the right arrow isn't down,
+				//and the hero isn't moving vertically:
+				//Stop the hero
+				if (!right.isDown && hero.vy === 0) {
+					hero.vx = 0;
+					clearInterval(interval);
+				}
+			};
+
+			//Up
+			var upTimeout;
+			up.press = function() {
+				hero.vy = -3;
+				hero.vx = 0;
+				var counter = 0;
+				sprites.hero.setFrame(frames.hero.back[counter]);
+				clearInterval(interval);
+				interval = setInterval(function() {
+					sprites.hero.setFrame(frames.hero.back[counter]);
+					counter = (counter + 1) % 3;
+				}, 100);
+			};
+			up.release = function() {
+				if (!down.isDown && hero.vx === 0) {
+					hero.vy = 0;
+					clearInterval(interval);
+				}
+			};
+
+			//Right
+			var rightTimeout;
+			right.press = function() {
+				hero.vx = 3;
+				hero.vy = 0;
+				var counter = 0;
+				sprites.hero.setFrame(frames.hero.right[counter]);
+				clearInterval(interval);
+				interval = setInterval(function() {
+					sprites.hero.setFrame(frames.hero.right[counter]);
+					counter = (counter + 1) % 3;
+				}, 100);
+			};
+			right.release = function() {
+				if (!left.isDown && hero.vy === 0) {
+					hero.vx = 0;
+					clearInterval(interval);
+				}
+			};
+
+			//Down
+			var downTimeout;
+			down.press = function() {
+				hero.vy = 3;
+				hero.vx = 0;
+				var counter = 0;
+				sprites.hero.setFrame(frames.hero.front[counter]);
+				clearInterval(interval);
+				interval = setInterval(function() {
+					sprites.hero.setFrame(frames.hero.front[counter]);
+					counter = (counter + 1) % 3;
+				}, 100);
+			};
+			down.release = function() {
+				if (!up.isDown && hero.vx === 0) {
+					hero.vy = 0;
+					clearInterval(interval);
+				}
+			};
+		}
+	</script>
 </body>
